Fix token fetch

--- a/manifest.json
+++ b/manifest.json
@@ -22,5 +22,11 @@
       "type": "module",
       "run_at": "document_end"
     }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": ["secrets.json"],
+      "matches": ["<all_urls>"]
+    }
   ]
 }
