--- a/manifest.json
+++ b/manifest.json
@@ -34,6 +34,7 @@
         "javascript/shared/specs-calculator.js",
         "javascript/shared/commit-utils.js",
         "javascript/shared/lyriq-status-updater.js",
+        "javascript/shared/pr-refresh.js",
         "javascript/pull.js"
       ],
       "run_at": "document_end"
@@ -48,6 +49,7 @@
         "javascript/shared/specs-calculator.js",
         "javascript/shared/commit-utils.js",
         "javascript/shared/lyriq-status-updater.js",
+        "javascript/shared/pr-refresh.js",
         "javascript/index.js"
       ],
       "run_at": "document_end"
